nldl_derive/tests/ui/serializable/nla-type-missing-annotation-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/serializable/nla-type-missing-annotation-fails.rs:3:28
  |
3 | #[derive(Debug, PartialEq, nldl::attr::Serialize)]
  |                            ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Please annotate all enum variants with #[nla_type(..)]. Saw "Unknown" unannotated.
